# graphone

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  TROUBLESHOOTING.md  package-lock.json  package.json  src  static  vite.config.js
.github/workflows/: build.yml  format-check.yml  macos-local-test-artifacts.yml  release-binaries.yml  repository-guardrails.yml
docs/: agent-first-autonomous-iteration-playbook.md
docs/specs/: project-findings-2026-02.md  project-specs.md  wsl2-development-notes.md
docs/tasks/: tool-event-hardening.md
management/specs/: project-findings-2026-02.md  project-specs.md  wsl2-development-notes.md
management/tasks/: tasks.md
reports/: path-b-measurements-2026-02.json  path-b-measurements-2026-02.md
scripts/: generate-static-models.ts  measure-path-b.mjs  run-windows.sh  stage-windows-portable.sh  verify-path-b-host.mjs
services/agent-host/: README.md  package.json
sidecars/pi-agent-host/: README.md  tsconfig.json
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.local.conf.json  windows-app.manifest
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: desktop.json  mobile.json
src-tauri/src/: commands.rs  lib.rs  logger.rs  main.rs  models_static.rs  sidecar.rs  state.rs  types.rs  utils.rs
src-tauri/src/commands/: oauth_and_models.rs  session_scopes.rs  settings.rs  sidecar_lifecycle.rs
src-tauri/src/platform/: linux_clipboard.rs  linux_open_url.rs  mod.rs
src-tauri/src/sidecar/: event_payload.rs  linux_runtime.rs  ndjson.rs
(+125 files in other folders)
